--- a/express-locallibrary-tutorial/.eslintrc.json
+++ b/express-locallibrary-tutorial/.eslintrc.json
@@ -4,6 +4,10 @@
         "import"
     ],
     "rules": {
-        "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
+        "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
+        "no-console":"off",
+        "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+        "func-names":"off",
+        "prefer-destructuring":"off"
       }
 }
