--- a/express-locallibrary-tutorial/package.json
+++ b/express-locallibrary-tutorial/package.json
@@ -21,5 +21,18 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "nodemon": "^1.18.4"
+  },
+  "eslintConfig": {
+    "extends": "airbnb-base",
+    "plugins": [
+        "import"
+    ],
+    "rules": {
+        "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
+        "no-console":"off",
+        "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+        "func-names":"off",
+        "prefer-destructuring":"off"
+      }
   }
 }
