--- a/express-locallibrary-tutorial/package.json
+++ b/express-locallibrary-tutorial/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.17",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11"
@@ -21,18 +22,5 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "nodemon": "^1.18.4"
-  },
-  "eslintConfig": {
-    "extends": "airbnb-base",
-    "plugins": [
-        "import"
-    ],
-    "rules": {
-        "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
-        "no-console":"off",
-        "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-        "func-names":"off",
-        "prefer-destructuring":"off"
-      }
   }
 }
