--- a/express-locallibrary-tutorial/.eslintrc
+++ b/express-locallibrary-tutorial/.eslintrc
@@ -21,6 +21,8 @@
     ],
     "func-names": "off",
     "prefer-destructuring": "off",
-    "consistent-return": "off"
+    "consistent-return": "off",
+    "no-plusplus":"off",
+    "no-param-reassign":"off"
   }
 }
