Add all delete functionality

--- a/express-locallibrary-tutorial/.eslintrc
+++ b/express-locallibrary-tutorial/.eslintrc
@@ -23,6 +23,7 @@
     "prefer-destructuring": "off",
     "consistent-return": "off",
     "no-plusplus":"off",
-    "no-param-reassign":"off"
+    "no-param-reassign":"off",
+    "no-shadow":"off"
   }
 }
