--- a/express-locallibrary-tutorial/.eslintrc
+++ b/express-locallibrary-tutorial/.eslintrc
@@ -24,6 +24,8 @@
     "consistent-return": "off",
     "no-plusplus":"off",
     "no-param-reassign":"off",
-    "no-shadow":"off"
+    "no-shadow":"off",
+    "camelcase":"off",
+    "max-len": ["error", { "code": 140 }]
   }
 }
